<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:orientation="vertical"
    android:background="@color/lite_grey">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/orange"
           android:background="@color/black"
           android:text="@string/app_name_bangla"
           android:textSize="30dp"
           android:gravity="center"
           android:padding="20dp"/>


       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:background="@color/black"
           android:text="@string/bismillah_arabic"
           android:textSize="20dp"
           android:gravity="center"
           android:padding="10dp"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:background="@color/black"
           android:text="@string/bismillah_bangla"
           android:textSize="20dp"
           android:gravity="center"
           android:padding="10dp"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:background="@color/black"
           android:text="@string/bismillah_bangla_meaning"
           android:textSize="15dp"
           android:gravity="center"
           android:padding="10dp"/>

   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        android:gravity="center">

        <Button
            android:id="@+id/btn_startReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/start_reading"
            android:background="@drawable/pressed_green"
            android:layout_margin="20dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_allSura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/all_sura"
            android:background="@drawable/pressed_green"
            android:layout_margin="20dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_namazTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/namaz_time"
            android:background="@drawable/pressed_green"
            android:layout_margin="20dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/website"
            android:background="@drawable/pressed_green"
            android:layout_margin="20dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_helpus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/help_us"
            android:background="@drawable/pressed_green"
            android:layout_margin="20dp"
            android:textColor="@color/white"/>

        
        
        
    </LinearLayout>




</LinearLayout>