<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SplashScreenActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:background="@color/black"
            android:text="@string/app_name_bangla"
            android:textSize="30dp"
            android:gravity="center"
            android:padding="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/bismillah_arabic"
            android:textSize="20dp"
            android:gravity="center"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/bismillah_bangla"
            android:textSize="20dp"
            android:gravity="center"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/bismillah_bangla_meaning"
            android:textSize="15dp"
            android:gravity="center"
            android:padding="10dp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/PB_loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"/>




</LinearLayout>